[project]
name = "siba-dataviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "nbdime>=4.0.4",
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
]
